turtleart.polygon7.Polygon7.scala.error
Compilation error:
Polygon7:5: error: '<-' expected but ')' found.
  for(1 to 7){
            ^Polygon7:9: error: illegal start of simple expression
} 
^